[ Users cart items displayed on the cart page, Alignment issues in stylesheet resolved : 26 ]

--- a/public/stylesheets/user/cart/cart.scss
+++ b/public/stylesheets/user/cart/cart.scss
@@ -55,13 +55,16 @@
         }
 
         .cards {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+
             .card {
                 display: flex;
                 outline: 1px solid peru;
-                height: 11rem;
+                height: 12rem;
 
                 img {
-                    height: 100%;
                     width: 12.5rem;
                     object-fit: cover;
                 }
@@ -70,13 +73,23 @@
                     display: flex;
                     flex-direction: column;
                     justify-content: space-evenly;
-                    padding: 1rem;
+                    padding: .5rem 1rem;
 
                     h1 {
                         strike {
                             color: rgba(189, 166, 144, 0.75);
                             text-decoration: line-through 3px rgb(61, 56, 56);
                         }
+                    }
+
+                    p {
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 2;
+                        line-clamp: 2;
+                        -webkit-box-orient: vertical;
+                        text-align: justify;
                     }
 
                     .qnty {
@@ -179,7 +192,7 @@
 
             .cards {
                 .card {
-                    height: 10rem;
+                    height: 9rem;
 
                     img {
                         width: 7.5rem;
@@ -188,8 +201,20 @@
                     .details {
                         padding: .5rem .75rem;
 
+                        h2 {
+                            font-size: 16px;
+                        }
+
+                        h4 {
+                            font-size: 12.5px;
+                        }
+
+                        p {
+                            font-size: 12px;
+                        }
+
                         h1 {
-                            font-size: 18px;
+                            font-size: 17px;
                         }
 
                         .qnty {
